Fixes for ExerciseFragments
Update for crashes with previously added Fragments and layout issues
using weights.

--- a/exercises/ExerciseFragments/res/layout-land/activity_main.xml
+++ b/exercises/ExerciseFragments/res/layout-land/activity_main.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:id="@+id/titlePlaceholder"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="1" >
@@ -15,7 +15,7 @@
 
     <FrameLayout
         android:id="@+id/welcomePlaceholder"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="2" >
