Updates to HelloCamera and HelloMedia

--- a/samples/HelloMedia/res/layout/activity_main.xml
+++ b/samples/HelloMedia/res/layout/activity_main.xml
@@ -46,5 +46,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/buttonPlayHit" />
+    
+    <Button
+        android:id="@+id/playRingtone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="@string/buttonPlayRingtone" />
 
 </LinearLayout>
