--- a/exercises/ExerciseThemes/res/values/colors.xml
+++ b/exercises/ExerciseThemes/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="custom_white">#F58427</color>
-	<color name="custom_blue">#FF33FF</color>
+	<color name="custom_white">#FFFFFF</color>
+	<color name="custom_blue">#0033FF</color>
 </resources>
