--- a/exercises/ExerciseThemes/res/values/themes.xml
+++ b/exercises/ExerciseThemes/res/values/themes.xml
@@ -10,6 +10,9 @@
 			- Button
         -->
         
+        <item name="android:actionBarStyle">@style/CustomActionBar</item>
+        <item name="android:buttonStyle">@style/CustomButton</item>
+        <item name="android:editTextStyle">@style/CustomEditText</item>
 
     </style>
 
