Updates for class
Adding ExerciseSettings and fixes for HelloWidget, HelloSettings, and
HelloDragDrop

--- a/samples/HelloWidget/res/layout/books_list_appwidget.xml
+++ b/samples/HelloWidget/res/layout/books_list_appwidget.xml
@@ -5,4 +5,5 @@
   android:layout_height="match_parent"
   android:layout_margin="4dp"
   android:background="@drawable/widget_background"
+  android:padding="10dp"
 />
